# vala-bootstrapping-project

./: .renameProject.sh.swp  README.md  renameProject.sh
libtoolproject/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  libtool
libtoolproject/autom4te.cache/: output.1  output.2  output.3  traces.0  traces.1  traces.3
libtoolproject/data/: Makefile  Makefile.am  Makefile.in
libtoolproject/data/apport/: Makefile  Makefile.in
libtoolproject/data/icons/: Makefile  Makefile.in
libtoolproject/data/themes/: Makefile.in
libtoolproject/docs/: Makefile  Makefile.am  Makefile.in
libtoolproject/lib/: DockController.vala  MainController.c  MainController.lo  MainController.vala  MainWindow.lo  Makefile  Makefile.am  Makefile.in  Paths.lo  bootstrapingproject-internal.h  bootstrapingproject-internal.vapi  bootstrapingproject-resources.c  bootstrapingproject-resources.lo  bootstrapingproject.gresource.xml  bootstrapingproject.h  bootstrapingproject.pc  bootstrapingproject.vapi  build-abi  libbootstrapingproject-internal.la  libbootstrapingproject.la
libtoolproject/lib/.deps/: AbstractMain.Plo  MainController.Plo  MainWindow.Plo  bootstrapingproject-resources.Plo
libtoolproject/lib/.libs/: libbootstrapingproject-internal.la  libbootstrapingproject.exp  libbootstrapingproject.la  libbootstrapingproject.lai  libbootstrapingproject.so.0  libbootstrapingproject.so.0.0.0  libbootstrapingproject.ver
libtoolproject/lib/Factories/: AbstractMain.c  AbstractMain.vala  Factory.c  Factory.vala
libtoolproject/lib/System/: Logger.c  Logger.vala  Paths.c  Paths.vala
libtoolproject/lib/Widgets/: CompositedWindow.c  CompositedWindow.vala  DockWindow.vala  MainWindow.c  MainWindow.vala
libtoolproject/man/: Makefile  Makefile.am  Makefile.in  bootstrapingproject.1
libtoolproject/po/: Makefile  Makefile.in
libtoolproject/src/: AppMain.c  AppMain.vala  Makefile  Makefile.am  Makefile.in  bootstrapingproject
libtoolproject/src/.deps/: bootstrapingproject-AppMain.Po
libtoolproject/src/.libs/: bootstrapingproject  lt-bootstrapingproject
libtoolproject/tests/: Drawing.vala  Items.vala  Main.vala  Makefile  Makefile.in  Preferences.vala
libtoolproject/vapi/: Makefile  Makefile.in
